# rpg_system

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_ROUTES.md  CHAT.md  CHAT_TECHNICAL.md  EXAMPLES.md  GETTING_STARTED.md  INTERFACE_TESTING.md  QUICK_START_TESTING.md  README.md  SETUP_FRONTEND.md  SPRINT_1_IMPLEMENTATION_CHECKLIST.md  SUMMARY_TESTING.md  SYSTEM_REDESIGN_SUMMARY.md  TESTING.md  TEST_CREDENTIALS.md  alembic.ini  chat_test.html  check_db.py  check_users.py  create_player.py  create_test_players.py  init_master.ps1  main.py  populate_data.py  pyproject.toml  rpg_system.db  rpg_system.sqbpro  run_astral_uv.py  send_message_single.py  test_character_requests.py  test_chat.py  test_chat_auto.py  test_login_api.ps1  test_player_character.py  test_races_classes.py  verify_chat_history_access.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_free_points.py  002_create_character_attributes.py  003_migrate_attributes.py  README.md
backend/master/: main.py  updates_test.html
backend/master/controllers/: auth_controller.py  character_attribute_controller.py  character_controller.py  character_habilidade_controller.py  character_request_controller.py  chat_controller.py  classe_controller.py  country_controller.py  fight_controller.py  item_controller.py  (+12 more)
backend/player/: __init__.py
backend/tests/: test_character_attribute_controller.py  test_character_attribute_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css  main.jsx
(+126 files in other folders)
